[workspace]
resolver = "2"

members = [
	"bin/millau/node",
	"bin/millau/runtime",
	"bin/rialto/node",
	"bin/rialto/runtime",
	"bin/rialto-parachain/node",
	"bin/rialto-parachain/runtime",
	"bin/runtime-common",
	"fuzz/storage-proof",
	"modules/beefy",
	"modules/grandpa",
	"modules/messages",
	"modules/parachains",
	"modules/relayers",
	"modules/xcm",
	"modules/shift-session-manager",
	"primitives/beefy",
	"primitives/chain-bridge-hub-cumulus",
	"primitives/chain-bridge-hub-rococo",
	"primitives/chain-bridge-hub-wococo",
	"primitives/chain-kusama",
	"primitives/chain-millau",
	"pallets/*",
	"core-primitives",
	"xcm-primitives",
	"primitives/chain-polkadot",
	"primitives/chain-rialto",
	"primitives/chain-rialto-parachain",
	"primitives/chain-rococo",
	"primitives/chain-westend",
	"primitives/chain-wococo",
	"primitives/header-chain",
	"primitives/messages",
	"primitives/parachains",
	"primitives/polkadot-core",
	"primitives/relayers",
	"primitives/runtime",
	"primitives/test-utils",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"xcm/xcm-executor/integration-tests",
	"xcm/xcm-simulator",
	#"xcm/xcm-simulator/example",
	#"xcm/xcm-simulator/fuzzer",
	"xcm/pallet-xcm",
	"xcm/pallet-xcm-benchmarks",
	"xcm/procedural",
	"relays/bin-substrate",
	"relays/client-bridge-hub-rococo",
	"relays/client-bridge-hub-wococo",
	"relays/client-kusama",
	"relays/client-millau",
	"relays/client-polkadot",
	"relays/client-rialto",
	"relays/client-rialto-parachain",
	"relays/client-rococo",
	"relays/client-substrate",
	"relays/client-westend",
	"relays/client-wococo",
	"relays/finality",
	"relays/lib-substrate-relay",
	"relays/messages",
	"relays/parachains",
	"relays/utils",
]
