[package]
name = "frame-support2"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Support code for the runtime."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.136", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-metadata = { version = "15.0.0", default-features = false, features = ["v14", "v15-unstable"] }
sp-api ={ git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime ={ git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-staking ={ git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-weights = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
tt-call = "1.0.8"
frame-support-procedural ={ git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
paste = "1.0"
once_cell = { version = "1", default-features = false, optional = true }
sp-state-machine ={ git = "https://github.com/paritytech/substrate", branch = "master", optional = true}
bitflags = "1.3"
impl-trait-for-tuples = "0.2.2"
smallvec = "1.8.0"
log = { version = "0.4.17", default-features = false }
sp-core-hashing-proc-macro = { git = "https://github.com/paritytech/substrate", branch = "master"}
k256 = { version = "0.13.1", default-features = false, features = ["ecdsa"] }
environmental = { version = "1.1.4", default-features = false }

[dev-dependencies]
serde_json = "1.0.79"
assert_matches = "1.3.0"
pretty_assertions = "1.2.1"
frame-system = {  git = "https://github.com/paritytech/substrate", branch = "master", default-features = false } 
parity-util-mem = { version = "0.12.0", default-features = false, features = ["primitive-types"] }

[features]
default = ["std"]
std = [
	"once_cell",
	"serde",
	"sp-api/std",
	"sp-io/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
		"sp-weights/std",

	"environmental/std",
	"sp-runtime/std",
	"sp-tracing/std",
	"sp-arithmetic/std",
	"frame-metadata/std",
	"sp-inherents/std",
	"sp-staking/std",
	"sp-state-machine",
	"frame-support-procedural/std",
	"log/std",
]
runtime-benchmarks = []
try-runtime = []
# By default some types have documentation, `no-metadata-docs` allows to reduce the documentation
# in the metadata.
no-metadata-docs = ["frame-support-procedural/no-metadata-docs"]
# By default some types have documentation, `full-metadata-docs` allows to add documentation to
# more types in the metadata.
full-metadata-docs = ["scale-info/docs"]
