[package]
name = "hydradx-adapters"
version = "0.2.2"
description = "Structs and other generic types for building runtimes."
authors = ["GalacticCouncil"]
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/warehouse/tree/master/adapters"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }

# HydraDX dependencies
hydradx-traits2 = { path="../traits2", default-features = false }
pallet-transaction-multi-payment = { path = "../transaction-multi-payment", default-features = false }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-support2 = {path="../../modules/support",default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

# Polkadot dependencies
xcm = {  path="../../xcm",  default-features = false }
xcm-builder = { path="../../xcm/xcm-builder", default-features = false }
xcm-executor = { path="../../xcm/xcm-executor", default-features = false }

[dev-dependencies]
lazy_static = { features = ["spin_no_std"], version = "1.4.0" }

[features]
default = ["std"]
runtime-benchmarks = [
    "xcm-builder/runtime-benchmarks",
    "xcm-executor/runtime-benchmarks",
]
std = [
    "codec/std",
     "frame-support/std",
    "frame-support2/std",
    "hydradx-traits2/std",
    "pallet-transaction-multi-payment/std",
    "xcm/std",
    "sp-runtime/std",
    "sp-std/std",
    "xcm-builder/std",
    "xcm-executor/std",
]
