[package]
name = "orml-xtokens"
description = "Cross-chain token transfer."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xtokens"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }

# substrate
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }

# cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", default-features = false , branch = "master" }

# polkadot
pallet-xcm = { path ="../../xcm/pallet-xcm", default-features = false  }
xcm = { path ="../../xcm", default-features = false  }
xcm-executor = { path ="../../xcm/xcm-executor",default-features = false  }

# orml
orml-traits = { path = "../traits", default-features = false}
orml-xcm-support = { path = "../xcm-support", default-features = false }
bp-westend ={path="../../primitives/chain-westend",default-features = false}

[dev-dependencies]
# substrate
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }

# cumulus
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "master" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "master" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "master" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "master" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "master" }

# polkadot
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "master" }
xcm-builder = { path="../../xcm/xcm-builder"}
xcm-simulator = {path="../../xcm/xcm-simulator" }

# orml
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library",branch = "master" }
orml-xcm = { path = "../xcm" }

[features]
default = ["std"]
std = [
	"serde",
	"orml-tokens/std",
	"codec/std",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
	"bp-westend/std",
	"orml-traits/std",
	"orml-xcm-support/std",
	"pallet-xcm/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-executor/std",
	"xcm/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-xcm/try-runtime",
]
