[package]
name = "pallet-xcm-benchmarks"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
version = "0.9.32"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate" , branch = "master" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate" , branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate" , branch = "master" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate" , branch = "master" }
xcm-executor = { path = "../xcm-executor", default-features = false }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate" , branch = "master" }
xcm = { path = "..", default-features = false }
log = "0.4.17"

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate" , branch = "master" }
pallet-assets = { git = "https://github.com/paritytech/substrate" , branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate" , branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate" , branch = "master" }
sp-tracing = { git = "https://github.com/paritytech/substrate" , branch = "master" }
xcm-builder = { path = "../xcm-builder" }
xcm = { path = ".." }
# temp
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }
polkadot-runtime-common =  { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }
# westend-runtime = { path = "../../runtime/westend", features = ["runtime-benchmarks"] }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }
[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std"
]
runtime-benchmarks = [
	"xcm/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
