[package]
name = "xcm-simulator"
description = "Test kit to simulate cross-chain message passing and XCM execution"
edition = "2021"
repository = "https://github.com/paritytech/polkadot.git"
version = "0.9.41"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.4.0" }
paste = "1.0.7"

frame-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master" }

xcm = { path = "../" }
xcm-executor = { path = "../xcm-executor" }
polkadot-core-primitives ={ git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-parachain ={ git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "master" }
