[package]
name = "xcm-executor-integration-tests"
description = "Integration tests for the XCM Executor"
edition = "2021"
repository = "https://github.com/paritytech/polkadot.git"
version = "0.9.41"

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures = "0.3.21"
pallet-xcm = { path = "../../pallet-xcm" }
polkadot-test-client =  { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }
polkadot-test-runtime =  { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }
polkadot-test-service =  { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "master" }
xcm = { path = "../..", default-features = false }
xcm-executor = { path = ".." }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"xcm/std",
	"sp-runtime/std",
	"frame-support/std",
]
